fix jump bg v8

--- a/src/App.css
+++ b/src/App.css
@@ -54,16 +54,25 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-.backgroundWrap {
+.parallaxBG {
+  position: relative;
+  overflow: hidden;
+  /* height: 100vh; */
   width: 100%;
-  height: 100%;
+}
+
+.backgroundWrap {
   position: fixed;
-  bottom: 0;
-  left: 0;
+  top: -20%;
+  left: -20%;
+  right: -20%;
+  bottom: -20%;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 50% 50%;
-  transition: 1s;
+  background-position: center;
+  transform: translateY(0);
+  transition: transform 0.8s ease-out;
+  z-index: 0;
 }
 
 .backgroundBlur {
